# cda_free_course

./: README.md  homework.ipynb  pyproject.toml
statistics/: 1_clt.ipynb  2_distributions.ipynb  readme.md
tools/: 1_pandas.ipynb  2_processing.ipynb  3_vis.ipynb  dataset.csv  readme.md
