[tool.poetry]
name = "cda-free-course"
version = "0.1.0"
description = ""
authors = ["Yadetbekov"]
readme = "README.md"
packages = [{include = "cda_free_course"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.5"
numpy = "^1.25.2"
pandas = "^2.1.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
